----------------------------------------------------------------------
 OmegaT 2.7.0
----------------------------------------------------------------------
  16 Enhancements
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.7.0 vs. 2.6.3

  Implemented requests:

  - Have glossary search in Find dialog
  http://sourceforge.net/support/tracker.php?aid=3385415

  - Grey out more options with Search Files
  http://sourceforge.net/support/tracker.php?aid=3385348

  - Put "Search files" option at top of Search window
  http://sourceforge.net/support/tracker.php?aid=2610166

  - Adding content (e.g., glossaries) search options
  http://sourceforge.net/support/tracker.php?aid=1587706

  - Go to Next **Translated** Segment
  http://sourceforge.net/support/tracker.php?aid=3181098

  - Do not remove leading and trailing spaces
  http://sourceforge.net/support/tracker.php?aid=3608611

  - Preserve spaces for all tags
  http://sourceforge.net/support/tracker.php?aid=3608615

  - Moving between tags with a single keystroke
  http://sourceforge.net/support/tracker.php?aid=3579784

  - Show the content of tags in tooltips
  http://sourceforge.net/support/tracker.php?aid=3573166

  - Validate tags when creating target files
  http://sourceforge.net/support/tracker.php?aid=1398289

  - Validate tags after each segment
  http://sourceforge.net/support/tracker.php?aid=3608715

  - Tag protection
  http://sourceforge.net/support/tracker.php?aid=3608720

  - Protected text in XLIFF
  http://sourceforge.net/support/tracker.php?aid=3608725

  Other enhancements:

  - Insert Source Tags become Insert Missing Source Tags. It only adds
the tags missing in the segment.

  - Edit > Insert Next Missing Tag inserts the next tag missing in the
target segment

  - In the right-click menu of the current segment, missing tags
appear in the contextual menu, and can be inserted individually.

  Bug fixes:
