@@ -197,6 +197,9 @@ TF_MENU_EDIT_TAG_INSERT_N=Insert Tag {0}
 
 TF_MENU_EDIT_CREATE_GLOSSARY_ENTRY=Create &Glossary Entry
 
+TF_MENU_EDIT_COMPARE=Select Mat&ch
+TF_MENU_EDIT_COMPARE_NEXT=Select &Next Match
+TF_MENU_EDIT_COMPARE_PREV=Select &Previous Match
 TF_MENU_EDIT_COMPARE_1=Select Match #&1
 
 TF_MENU_EDIT_COMPARE_2=Select Match #&2
