@@ -22,6 +22,8 @@ editSelectFuzzy2MenuItem=meta 2
 editSelectFuzzy3MenuItem=meta 3
 editSelectFuzzy4MenuItem=meta 4
 editSelectFuzzy5MenuItem=meta 5
+editSelectFuzzyPrevMenuItem=meta UP
+editSelectFuzzyNextMenuItem=meta DOWN
 
 gotoNextUntranslatedMenuItem=meta U
 gotoNextTranslatedMenuItem=meta shift U
